tests/baselines/reference/aliasUsageInGenericFunction.errors.txt
aliasUsageInGenericFunction_main.ts(10,19): error TS2352: Conversion of type 'null' to type 'IHasVisualizationModel' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== aliasUsageInGenericFunction_main.ts (1 errors) ====
    import Backbone = require("./aliasUsageInGenericFunction_backbone");
    import moduleA = require("./aliasUsageInGenericFunction_moduleA");
    interface IHasVisualizationModel {
        VisualizationModel: typeof Backbone.Model;
    }
    function foo<T extends { a: IHasVisualizationModel }>(x: T) {
        return x;
    }
    var r = foo({ a: moduleA });
    var r2 = foo({ a: <IHasVisualizationModel>null });
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type 'IHasVisualizationModel' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    
==== aliasUsageInGenericFunction_backbone.ts (0 errors) ====
    export class Model {
        public someData: string;
    }
    
==== aliasUsageInGenericFunction_moduleA.ts (0 errors) ====
    import Backbone = require("./aliasUsageInGenericFunction_backbone");
    export class VisualizationModel extends Backbone.Model {
        // interesting stuff here
    }
    